[FIX] web: badge widget vertical alignment
before this commit: badge widget was not displayed vertically aligned

after this commit: badge widget will display vertically align

task-2351554

closes odoo/odoo#59401

--- a/addons/web/static/src/scss/list_view.scss
+++ b/addons/web/static/src/scss/list_view.scss
@@ -253,7 +253,7 @@
             .o_list_char,
             .o_list_number {
                 white-space: nowrap;
-                .o_field_widget:not(.o_row_handle) {
+                .o_field_widget:not(.o_row_handle):not(.o_field_badge) {
                     display: inline;
                 }
             }
